--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,9 @@
      box-sizing: border-box;
      font-family: "Roboto", sans-serif;
 }
+section{
+     min-height: 100vh;
+     background-image: url("../image/pix.jpg");
+
 
 
