landing page upd

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 section{
      min-height: 100vh;
      background-image: url("../image/pix.jpg");
+     background-repeat: no-repeat;
+     background-size: cover;
+}
+
+
 
 
 
