--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+*{
+margin:0px;
+padding:0px;
+box-sizing: border-box;
+font-family: "Roboto", sans-serif;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-nav {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-bottom: 1px solid #ddd;
-}
-
-nav h1 {
-    display: inline;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-.article {
-    margin: 40px 0;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: White;
-    text-decoration: none;
-    border-radius: 5px;
-}
