landing page upd

--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,10 @@ padding:0px;
 box-sizing: border-box;
 font-family: "Roboto", sans-serif;
 }
+section{
+min-height: 100vh;
+background-image: url("../image/pix.jpg");
+background-repeat: no-repeat;
+background-size: cover;
+}
 
