--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ font-family: "Roboto", sans-serif;
 body section{
 min-height: 100vh;
 background-image: url("../image/pix.jpg");
-background-color: #074f57;
+background-color: #075743;
 background-repeat: no-repeat;
 background-size: cover;
 }
