--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,29 @@ background-color: #075743;
 background-repeat: no-repeat;
 background-size: cover;
 }
+.container{
+    width:85%;
+    margin:auto;
+}
+nav{
+    height: 80px;
+}
+nav h1{
+    float:left;
+    line-height: 80px;
+    font-size: 35px;
+    font-size: inline;
+    color: #eb7620;
+}
+nav ul{
+    float: right;
+    line-height: 80px;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    padding: 0px 5px;
+}
+
+
 
