--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ nav h1{
     line-height: 80px;
     font-size: 35px;
     font-size: inline;
-    color: #eb7620;
+    color: #0b6839;
 }
 nav ul{
     float: right;
@@ -34,6 +34,21 @@ nav ul li{
     display: inline-block;
     list-style: none;
     padding: 0px 5px;
+}
+nav ul li a{
+    color: darkturquoise;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 5px;
+    padding: 7px 8px;
+}
+nav ul li a:hover{
+    background-color: coral;
+    transition: 0.5s ease;
+}
+
+
+
 }
 
 
