--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ font-family: "Roboto", sans-serif;
 }
 body section{
 min-height: 100vh;
-background-image: url("../image/pix.jpg");
+background-image: linear-gradient(rgba(102, 0, 0, 0.6),rgba(0,0,0,0.60)   url("../image/pix.jpg");
 background-color: #075743;
 background-repeat: no-repeat;
 background-size: cover;
@@ -46,8 +46,22 @@ nav ul li a:hover{
     background-color: coral;
     transition: 0.5s ease;
 }
-
-
+nav ul li .active{
+    background-color: aqua;
+}
+.article{
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    transform: translateY(25vh);
+}
+.article h1{
+font-size: 36px;
+color: #6be2c4;
+letter-spacing: 1.5px;
+font-weight: 800;
+margin-bottom: 25px;
+}
 
 }
 
