git add . git commit -m 'landing page upd' git push

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ font-family: "Roboto", sans-serif;
 }
 body section{
 min-height: 100vh;
-background-image: linear-gradient(rgba(0, 0, 0, 0.60),rgba(0,0,0,0.60)   url("../image/pix.jpg");
+background-image: linear-gradient(rgba(0, 0, 0, 0.60),rgba(0,0,0,0.60)), url("../image/pix.jpg");
 background-color: #075743;
 background-repeat: no-repeat;
 background-size: cover;
