--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,17 @@ nav ul li .active{
 }
 .article h1{
 font-size: 36px;
-color: #6be2c4;
+color: #f70800;
 letter-spacing: 1.5px;
 font-weight: 800;
 margin-bottom: 25px;
 }
-
+.article p{
+    font-size: 18px;
+    color: #f70800;
+    line-height: 1.5;
+    margin-bottom: 50px;
+}
 
 
 
