--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,9 @@ margin-bottom: 25px;
     text-decoration: none;
     background-color: #075743;
 }
-
+.article .btn:hover{
+    background-color: #f70800;
+    transition: 0.5s ease;
+}
 
 
