landing page upd

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav ul li{
     padding: 0px 5px;
 }
 nav ul li a{
-    color: darkturquoise;
+    color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 5px;
