--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,11 @@ nav ul li a{
     padding: 7px 8px;
 }
 nav ul li a:hover{
-    background-color: coral;
+    background-color: rgb(1, 128, 39);
     transition: 0.5s ease;
 }
 nav ul li .active{
-    background-color: aqua;
+    background-color: rgb(2, 107, 25);
 }
 .article{
     width: 50%;
