--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ margin-bottom: 25px;
 }
 .article p{
     font-size: 18px;
-    color: #037e1e;
+    color: #025815;
     line-height: 1.5;
     margin-bottom: 50px;
 }
