--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,13 @@ letter-spacing: 1.5px;
 font-weight: 800;
 margin-bottom: 25px;
 }
+.article h2{
+    font-size: 25px;
+    color: #fff;
+}
 .article p{
     font-size: 18px;
-    color: #84bb04;
+    color: #04bd0e;
     line-height: 1.5;
     margin-bottom: 50px;
 }
