--- a/css/style.css
+++ b/css/style.css
@@ -84,5 +84,60 @@ margin-bottom: 25px;
     background-color: #b3ff03;
     transition: 0.5s ease;
 }
+#features {
+    background-color:rgb(2, 107, 25)
+    padding: 60px 20px;
+    text-align: center;
+}
+.features-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.feature {
+    background-color: #02f34a;
+    padding: 20px;
+    margin: 20px;
+    flex: 1 1 30%;
+    box-shadow: 0 2px 10px rgba(6, 163, 103, 0.1);
+}
+.feature h3 {
+    font-size:  25px;
+    margin-bottom: 10px;
+}
+.feature p {
+    font-size: 25px;
+    color: #09d113666;
+}
+#about {
+    background-color: #fff;
+    padding: 60px 20px;
+    text-align: center;
+    color: #fff;
+}
+#about p {
+    font-size: 25px;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 20px auto;
+}
+.team-members {
+    list-style-type: none;
+    padding: 0;
+}
+.team-members li {
+    margin: 10px 0;
+    font-size: 25px;
+}
+.team-members a {
+    margin: 0 5px;
+    font-size: 25px;
+    color: #03dd65;
+    text-decoration: none;
+}
+.team-members a:hover {
+    text-decoration: solid;
+}
+
 
 
