--- a/css/style.css
+++ b/css/style.css
@@ -147,13 +147,14 @@ margin-bottom: 25px;
 #products h2, #checkout h2 {
     font-size: 28px;
     margin-bottom: 20px;
+    color: #fff;
 }
 
 #products #product-list, #checkout #cart-list {
     padding: 20px;
     border: 1px solid #155a04;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: #94d867;
 }
 
 #checkout #total {
