--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@ body section {
 
     min-height: 100vh; 
 
-    background-image: linear-gradient(rgba(0,0,0,0.60), rgba(0,0,0,0.60)), url("../image/pix.jpg"); 
+    background-image: linear-gradient(rgba(0,0,0,0.60), rgba(0,0,0,0.60)), url("pix.jpg"); 
 
     background-color: #04ac2e; 
 
